# desktop

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  :w  CHANGELOG.md  LICENSE  README.md  TODO.md  ]  app.config.ts  biome.json  bun.lockb  components.json  drizzle.config.ts  myk  nuxt.config.ts  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
.github/: .config.cjs  .pre-commit.cjs
.github/workflows/: publish.yml
.obsidian/: workspace.json
MangaYouKnowDesktop/: nuxt.config.ts  package.json  tailwind.config.js
MangaYouKnowDesktop/lib/: prisma.ts
MangaYouKnowDesktop/prisma/: dev.db  schema.prisma
MangaYouKnowDesktop/src/: app.vue
MangaYouKnowDesktop/src-tauri/: Cargo.toml  tauri.conf.json
MangaYouKnowDesktop/src-tauri/capabilities/: default.json
MangaYouKnowDesktop/src-tauri/src/: lib.rs
MangaYouKnowDesktop/src/api/: prisma.ts
MangaYouKnowDesktop/src/components/: EditFavoriteModal.vue  FavoriteCard.vue  FavoriteModal.vue  Login.vue  MenuChaptersSlideover.vue  Reader.vue  SearchModal.vue  SearchedModal.vue  Sidebar.vue  UltraFavoriteCard.vue
MangaYouKnowDesktop/src/constants/: database.ts  index.ts  sources.ts
MangaYouKnowDesktop/src/database/: favorite.ts  index.ts  mark.ts  markFavorite.ts  migration.ts  readed.ts  user.ts
MangaYouKnowDesktop/src/decorators/: retry.ts
MangaYouKnowDesktop/src/functions/: database.ts
MangaYouKnowDesktop/src/interfaces/: animeDl.ts  chaptersResponse.ts  index.ts  mangaDl.ts
MangaYouKnowDesktop/src/lib/: prisma.ts
MangaYouKnowDesktop/src/managers/: downloadManager.ts  index.ts
MangaYouKnowDesktop/src/middleware/: sidebar.global.ts
MangaYouKnowDesktop/src/models/: chapter.ts  episode.ts  favorite.ts  index.ts  mark.ts  markFavorite.ts  readed.ts  user.ts
MangaYouKnowDesktop/src/pages/: configs.vue  favorites.vue  index.vue
MangaYouKnowDesktop/src/utils/: conditionalMemoize.ts  memoizedWithTime.ts  unshuffler.mjs
scripts/: create-env.js  myk  update.sh
src/: app.config.ts  app.css  app.d.ts  app.html  app.vue
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/binaries/: suwayomi-aarch64-apple-darwin  suwayomi-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json  desktop.json  mobile.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/utils/: env.rs  hashmap.rs  mod.rs  request.rs
src/components/: AddMangaModal.vue  AskModal.vue  ChapterTileButton.vue  ChapterTileUltraButton.vue  EditFavoriteModal.vue  FavoriteCard.vue  FavoriteContextMenu.vue  FavoriteModal.vue  Login.vue  MarkSelectedModal.vue  MarksModal.vue  MenuChaptersSlideover.vue  SearchModal.vue  SelectOrder.vue  SelectedDropdown.vue  ShareOrImportModal.vue  Sidebar.vue  System24.svelte  UltraFavoriteCard.vue  UltraFavoriteModal.vue  index.ts
src/components/animations/: card.ts
src/components/buttons/: ChapterButton.svelte  EpisodeButton.svelte  LibraryOrder.svelte
src/components/cards/: FavoriteCard.svelte  FavoritePanel.svelte  LibraryCard.svelte  SuggestionCard.svelte  UltraFavoriteCard.svelte
src/components/common/: BottomNavigation.svelte  Carousel.svelte  Decoration.svelte  Image.svelte  Sidebar.svelte  TitleBar.svelte  Tooltip.svelte
src/components/context-menu/: FavoriteContext.svelte
src/components/input/: LibrarySearch.svelte
src/components/modals/: AddCustom.svelte  AskDelete.svelte  AskSure.svelte  ChaptersMenu.svelte  Downloads.svelte  EditCollections.svelte  EditFavorite.svelte  EditTags.svelte  FavoriteModal.svelte  PanelModal.svelte  PatchNotes.svelte  PickCollection.svelte  PickTags.svelte  ReadFavorite.svelte  Search.svelte  Settings.svelte  SuggestionModal.svelte  Update.svelte  WatchFavorite.svelte
src/components/select/: DefaultPage.svelte  Language.svelte  LibraryCollection.svelte  LibraryOrder.svelte  LibrarySource.svelte  LibraryTag.svelte  PickReaded.svelte  Select.svelte  Source.svelte
src/components/toggle-buttons/: Theme.svelte
src/constants/: _common.ts  _database.ts  _language.ts  _secrets.ts  _sources.ts  _status.ts  _suggestions.ts  common.ts  database.ts  index.ts  language.ts  secrets.ts  sources.ts  suggestions.ts
src/css/: app.css
src/database/: _favorite.ts  _mark.ts  _markFavorite.ts  index.ts  readed.ts  user.ts
src/db/: driver.ts
src/db/schema/: favorites.ts  (+4 more)
src/decorators/: index.ts  memoize.ts  memoizeWithExpiration.ts
src/downloaders/: index.ts
src/functions/: _database.ts  _favorite.ts  _notify.ts  _player.ts  _settings.ts  _updater.ts  _window.ts  database.ts  favorite.ts  index.ts  notify.ts  player.ts  settings.ts  updater.ts  window.ts
src/hooks/: _favorites.ts  _selectedFavorites.ts  index.ts
src/icons/: index.ts
src/interfaces/: _animeDl.ts  _chapter.ts  _chaptersResponse.ts  _episode.ts  _favorite.ts  _favoriteLoaded.ts  _language.ts  _mangaDl.ts  _source.ts  _suggestion.ts  _updateInfo.ts  animeDl.ts  index.ts  mangaDl.ts
src/lib/: utils.ts
src/managers/: _downloadManager.ts  downloadManager.ts  index.ts
src/middleware/: sidebar.global.ts
src/models/: _chapter.ts  _favorite.ts  _readed.ts  episode.ts  index.ts  user.ts
src/pages/: configs.vue  favorites.vue  index.vue  read-ultrafavorites.vue  settings.vue
src/repositories/: _favorite.ts  _mark.ts  _markFavorite.ts  _migration.ts  _readed.ts  _user.ts  favorite.ts  index.ts  markFavorite.ts  migration.ts  readed.ts  user.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/services/: downloader.ts
src/states/: config.svelte.ts  index.ts  stored.svelte.ts  system.svelte.ts
src/store/: all.svelte.ts  index.ts
src/types/: SearchResult.ts  _chapter.ts  _common.ts  _downloading.ts  _favorite.ts  _favoriteLoaded.ts  _mark.ts  _source.ts  chapter.ts  comicSource.ts  favorite.ts  favoriteLoaded.ts  image.ts  index.ts  mark.ts  markFavorite.ts  notificationPayload.ts  panel.ts  readCache.ts  readed.ts  savedType.ts  searchResult.ts  suggestion.ts
src/utils/: common.ts  conditionalMemoize.ts  index.ts  memoizedWithTime.ts  unshuffler.mjs
(+213 files in other folders)
