[package]
name = "MangaYouKnow"
version = "0.9.25"
description = "A manga app!"
authors = ["ReiLoko4"]
license = "MIT"
repository = "https://github.com/manga-you-know/desktop"
edition = "2021"
rust-version = "1.87.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies]
serde_json = "1.0"
base64 = "0.21"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2.2.1"
tauri-plugin-os = "2"
lazy_static = "1.5.0"
once_cell = "1.20.2"
tauri-plugin-cache = "0.1.5"
tauri-plugin-opener = "2"


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2"
features = ["protocol-asset", "tray-icon", "image-png", "image-ico"]

[dependencies.tauri-plugin-sql]
version = "2"
features = ["postgres", "sqlite"]

[dependencies.tauri-plugin-notification]
version = "2"
features = ["windows7-compat"]

[dependencies.tauri-plugin-http]
version = "2"
features = ["unsafe-headers"]

[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-app-events = "0.2"

[target."cfg(any(target_os = \"windows\"))".dependencies]
windows = "0.61.3"
webview2-com = "0.37.0"
webview2-com-sys = "0.37.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-prevent-default = "2.1"
tauri-plugin-cli = "2"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
# tauri-plugin-drpc = "0.1.6"
tauri-plugin-updater = "2"
tauri-plugin-positioner = "2"
