[package]
name = "MangaYouKnow"
version = "0.9.33"
description = "A manga app!"
authors = ["thiagovianav"]
license = "MIT"
repository = "https://github.com/manga-you-know/desktop"
edition = "2021"
rust-version = "1.87.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
opt-level = 3 
jlto = true 
strip = true
codegen-units = 1

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies.tauri]
version = "2"
features = ["macos-private-api", "protocol-asset", "tray-icon", "image-png", "image-ico"]

# [patch.crates-io]
# tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }
# tauri-plugin = { git = "https://github.com/tauri-apps/tauri", branch = "feat/cef" }


[dependencies]
serde_json = "1.0"
base64 = "0.22"
tauri-plugin-fs = { version = "2", features = [] }
tauri-plugin-store = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
tauri-plugin-process = { version = "2", features = [] }
tauri-plugin-shell = { version = "2", features = [] }
tauri-plugin-os = { version = "2", features = [] }
lazy_static = "1.5.0"
once_cell = "1.20.2"
tauri-plugin-opener = { version = "2", features = [] }
tauri-plugin-autostart = { version = "2", features = [] }
tauri-plugin-prevent-default = "4"
tauri-plugin-cli = { version = "2", features = [] }
tauri-plugin-global-shortcut = { version = "2", features = [] }
tauri-plugin-single-instance = { version = "2", features = [] }
tauri-plugin-window-state = { version = "2", features = [] }
tauri-plugin-positioner = { version = "2", features = [] }
tauri-plugin-clipboard-manager = { version = "2", features = [] }

# [target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
# tauri-plugin-app-events = "0.2"

tauri-plugin-updater = { version = "2", features = [] }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri-plugin-sql]
version = "2"
features = ["sqlite"]

[dependencies.tauri-plugin-notification]
version = "2"
features = []

[dependencies.tauri-plugin-http]
version = "2"
features = ["unsafe-headers"]


